# skforecast-ai

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE  README.md  llm-plan-refinement.md  mkdocs.yml  pyproject.toml  test_out.json  test_plan.json  versions.json
.claude/: settings.json
.github/: copilot-instructions.md
.github/instructions/: docstrings.instructions.md  skforecast-ai-project.instructions.md  testing.instructions.md
.github/workflows/: ai-context-check.yml  unit-tests.yml
0.1.0/: 404.html  objects.inv  sitemap.xml
0.1.0/api/: assistant.html
0.1.0/javascripts/: mathjax.js
0.1.0/more/: consulting.html
0.1.0/quick-start/: first-forecast.html  how-to-install.html  quick-start.html
0.1.0/releases/: releases.html
0.1.0/search/: search_index.json
0.1.0/user-guides/: agentic-forecasting-step-by-step.ipynb  agentic-forecasting.html  agentic-forecasting.ipynb
dev/: IMPLEMENTATION_PHASES.md  PLAN_SKFORECAST_AI_REPO.md  agentic-forecasting-evaluation-plan.md  ask-result-parameter-refactor-plan.md  backtesting_plan.md  cli_evaluation.md  cli_implementation_plan.md  cli_usage.md  compare-forecasters-design.md  compare_forecasters_demo.ipynb  demo_ask.ipynb  demo_backtest.ipynb  demo_backtest_llm.ipynb  demo_forecast.ipynb  demo_generate_code.ipynb  demo_lag_selection.ipynb  demo_llm.ipynb  demo_mvp.ipynb  demo_phase_1_2.ipynb  demo_phase_3.ipynb  demo_phase_4.ipynb  demo_phase_5.ipynb  demo_phase_6.ipynb  demo_phase_7.ipynb  demo_phase_8.ipynb  evaluation.md  expressiveness_roadmap.md  forecast.py  forecasting_assistant_audit.md  multi_forecast.py  preds.csv  preds.json  preds_multi.csv  seasonality-lag-selection-review.md  summary_of_display_formats.md  test_structure_analysis.md
dev/deprecated user guides/: customizing-the-model.md  drift-detection.md  troubleshooting.md
dev/phases/: PHASE_1_PACKAGE_SKELETON.md  PHASE_2_DATA_PROFILER.md  PHASE_3_RECOMMENDATION.md  PHASE_4_CODE_GENERATION.md  PHASE_5_CLI.md  PHASE_6_LLM_PROVIDER.md  PHASE_7_LLM_AGENT.md  PHASE_8_ASSISTANT_API.md  PHASE_9_EXECUTION.md
docs/: README.md
docs/api/: assistant.md  cli.md  config.md  exceptions.md
docs/examples/: advanced-reasoning-engine.ipynb  agentic-backtesting.ipynb  agentic-forecasting-with-skforecast-ai-step-by-step.ipynb  agentic-forecasting-with-skforecast-ai.ipynb  demo_backtest_llm.ipynb  end-to-end-forecasting.ipynb  forecasting-time-series-with-skforecast-ai-fast-path.ipynb  forecasting-time-series-with-skforecast-ai-step-by-step.ipynb  forecasting-time-series-with-skforecast-ai.ipynb  talking-to-the-agent.ipynb
docs/javascripts/: mathjax.js  version-switcher.js
docs/more/: about-skforecast-ai.md  consulting.md
docs/quick-start/: first-forecast.md  how-to-install.md  quick-start.md
docs/releases/: releases.md
docs/stylesheets/: extra.css
docs/user-guides/: agentic-forecasting-step-by-step.ipynb  agentic-forecasting.ipynb  cli-usage.md
docs/user_guides/: agentic-forecasting-step-by-step.ipynb  agentic-forecasting.ipynb  architecture-and-logic.md  architecture-and-logic_detailed.md  backtesting.md  cli-usage-backup.md  cli-usage.md  customizing-the-model.md  data-profiling.ipynb  data-profiling.md  drift-detection.md  first-forecast.md  forecasting-multiple-series.md  forecasting_assistant_audit.md  foundation-forecasting.md  going-further.md  how-it-works-and-trust.md  human-in-the-loop.md  llm-plan-refinement.md  quick-start.md  reproducible-code.md  the-forecasting-workflow.md  troubleshooting.md  understanding-your-data.md  using-the-ai-assistant.md  why-skforecast-ai.md
skforecast_ai/: __init__.py  _constants.py  _display.py  _utils.py  assistant.py  cli.py  config.py  exceptions.py  schemas.py
skforecast_ai/execution/: __init__.py  backtesting_runner.py  forecast_runner.py  runner.py  validation.py
skforecast_ai/generation/: __init__.py  _utils.py  backtesting.py  code_templates.py  foundation.py  multi_series.py  single_series.py  statistical.py
skforecast_ai/llm/: __init__.py  agent.py  context.py  prompts.py  provider.py  skills.py
skforecast_ai/preparation/: __init__.py  compatibility.py
skforecast_ai/profiling/: PLAN_remove_forecasting_analysis.md  __init__.py  analysis.py  data_profile.py  forecasting_analysis.py  frequency.py
skforecast_ai/recommendation/: __init__.py  autoregressive.py  backtesting.py  calendar.py  explanation.py  forecaster_selection.py  metric_selection.py  preprocessing.py  rules.py
skforecast_ai/rendering/: __init__.py  _helpers.py  backtesting.py  foundation.py  multi_series.py  single_series.py  statistical.py
skforecast_ai/resources/: llms-base.txt  llms-full.txt
skforecast_ai/schemas/: __init__.py  plans.py  profiles.py  results.py
skills/autocorrelation-and-lag-selection/: SKILL.md
skills/choosing-a-forecaster/: SKILL.md
skills/feature-engineering/: SKILL.md
skills/forecasting-multiple-series/: SKILL.md
skills/forecasting-single-series/: SKILL.md
skills/statistical-models/: SKILL.md
stable/: index.html  sitemap.xml
stable/api/: cli.html
stable/javascripts/: version-switcher.js
stable/more/: about-skforecast-ai.html
stable/overrides/: main.html
stable/releases/: releases.html
stable/search/: search_index.json
tests/: fixtures_assistant.py  test_assistant.py  test_assistant_ask.py  test_assistant_backtest.py  test_assistant_backtest_code.py  test_assistant_compare.py  test_assistant_create_cv.py  test_assistant_forecast.py  test_assistant_forecast_code.py  test_assistant_generate_code.py  test_assistant_generate_cv.py  test_assistant_generate_plan.py  test_assistant_init.py  test_assistant_plan.py  test_assistant_profile.py  test_assistant_refine_plan.py  test_assistant_refine_plan_llm.py  test_assistant_render_code.py  test_assistant_render_forecast_code.py  test_assistant_run.py  test_cli.py  test_cli_config.py  test_cli_pipe.py  test_display.py  test_integration_backtest.py  test_schemas.py  test_utils.py
tools/: docs_check_links_web.ipynb  measure_skill_tokens.py  mkdocs_hooks.py  sync_skforecast_assets.py
(+100 files in other folders)
