[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "skforecast-ai"
version = "0.1.0"
description = "AI-powered forecasting assistant built on top of skforecast."
readme = "README.md"
authors = [
    {name = "Javier Escobar Ortiz", email = "javier.escobar.ortiz@gmail.com"},
    {name = "Joaquin Amat Rodrigo", email = "j.amatrodrigo@gmail.com"},
]

maintainers = [
    {name = "Javier Escobar Ortiz", email = "javier.escobar.ortiz@gmail.com"},
    {name = "Joaquin Amat Rodrigo", email = "j.amatrodrigo@gmail.com"},
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

license = "Apache-2.0"
license-files = ["LICENSE", "CITATION.cff"]

requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13",
    "pandas>=2.1",
    "skforecast>=0.22,<0.23",
    "typer>=0.22",
    "rich>=13.9",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
llm = [
    "pydantic-ai>=1.100,<2"
]

docs = [
    "mike==2.1.3",
    "mkdocs==1.6.1",
    "mkdocs-jupyter==0.26.3",
    "mkdocs-material==9.7.6",
    "mkdocstrings==1.0.4",
    "mkdocstrings-python==2.0.3",
    "black==26.3.1",
]

test = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "lightgbm>=4.0,<5.0",
]

dev = [
    "skforecast-ai[llm,docs,test]"
]

[project.scripts]
skforecast-ai = "skforecast_ai.cli:app"

[tool.setuptools.packages.find]
include = ["skforecast_ai*"]

[tool.setuptools.package-data]
skforecast_ai = ["skills/**/*", "resources/*.txt"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E221", "E251", "E501", "E241"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
max-line-length = 88

[tool.ruff.format]
quote-style = "double"
docstring-code-format = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
